--- a/package.json
+++ b/package.json
@@ -8,12 +8,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-ssr": "3.1.5",
+    "@auth0/nextjs-auth0": "0.13.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
+    "apollo-link-context": "1.0.20",
+    "apollo-link-error": "1.1.13",
+    "apollo-link-http": "1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "graphql": "^15.4.0",
+    "graphql-tag": "2.10.3",
     "gsap": "^3.5.1",
     "imagesloaded": "^4.1.4",
+    "isomorphic-unfetch": "3.0.0",
     "locomotive-scroll": "^4.0.6",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^3.1.6",
     "next": "^10.0.0",
     "next-images": "^1.6.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "subscriptions-transport-ws": "^0.9.18"
   }
 }
