--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DOMAIN=http://localhost:3000
+DOMAIN=https://powerful-woodland-23980.herokuapp.com/
 AUTH0_CLIENT_ID=MlqPoCvFU7jZ1mMVupA8WrN5vHMzH1rG
 AUTH0_AUDIENCE=https://dev-x93xw74j.eu.auth0.com/api/v2/
 AUTH0_DOMAIN=dev-x93xw74j.eu.auth0.com
 AUTH0_CLIENT_SECRET=of4Q55VlwFYfVXTRhDsj-r4QTT6YWanjgzxWXXC9o0xn2zEDBE115Ap6gnf2egKq
-REDIRECT_URI=http://localhost:3000/api/callback
-POST_LOGOUT_REDIRECT_URI=http://localhost:3000/
+REDIRECT_URI=https://powerful-woodland-23980.herokuapp.com/api/callback
+POST_LOGOUT_REDIRECT_URI=https://powerful-woodland-23980.herokuapp.com/
 SESSION_COOKIE_SECRET=s%3Al4ozSdvQ83TtC5RvJ.CiaaQoHtaY0H3QOB1kqR8H2B
