--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ AUTH0_DOMAIN=dev-x93xw74j.eu.auth0.com
 AUTH0_CLIENT_SECRET=of4Q55VlwFYfVXTRhDsj-r4QTT6YWanjgzxWXXC9o0xn2zEDBE115Ap6gnf2egKq
 REDIRECT_URI=http://localhost:3000/api/callback
 POST_LOGOUT_REDIRECT_URI=http://localhost:3000/
-SESSION_COOKIE_SECRET=s%3Al4ozSdvQ83TtC5RvJ.CiaaQoHtaY0H3QOB1kqR8H2B
+SESSION_COOKIE_SECRET=sT3Al4ozSdvQ83TtC5RvJ.CiaaQoHtaY0H3QOB1kqR8H2B
