--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-link-error": "1.1.13",
     "apollo-link-http": "1.5.17",
     "apollo-link-ws": "^1.0.20",
+    "firebase": "^8.2.3",
     "graphql": "^15.4.0",
     "graphql-tag": "2.10.3",
     "gsap": "^3.5.1",
