--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-link-ws": "^1.0.20",
     "firebase": "^7.15.0",
     "graphql": "^15.4.0",
+    "graphql-request": "^3.4.0",
     "graphql-tag": "2.10.3",
     "gsap": "^3.5.1",
     "imagesloaded": "^4.1.4",
