--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mobx-react-lite": "^3.1.6",
     "next": "^10.0.0",
     "next-images": "^1.6.2",
+    "next-page-transitions": "^1.0.0-beta.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "subscriptions-transport-ws": "^0.9.18"
