--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "apollo-link-error": "1.1.13",
     "apollo-link-http": "1.5.17",
     "apollo-link-ws": "^1.0.20",
+    "aws-sdk": "^2.832.0",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "boom": "^7.3.0",
+    "etag": "^1.8.1",
     "firebase": "^7.15.0",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
@@ -25,14 +30,18 @@
     "gsap": "^3.5.1",
     "imagesloaded": "^4.1.4",
     "isomorphic-unfetch": "3.0.0",
+    "joi": "^17.3.0",
     "locomotive-scroll": "^4.0.6",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^3.1.6",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "next": "^10.0.0",
     "next-images": "^1.6.2",
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "uuid": "^8.3.2"
   }
 }
