--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
+    "detectizr": "^2.2.0",
     "etag": "^1.8.1",
     "firebase": "^7.15.0",
     "graphql": "^15.4.0",
@@ -34,6 +35,7 @@
     "locomotive-scroll": "^4.0.6",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^3.1.6",
+    "modernizr": "^3.11.4",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "next": "^10.0.0",
