--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "simplebar": "^5.3.0",
     "subscriptions-transport-ws": "^0.9.18",
     "uuid": "^8.3.2"
   }
